--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,12 @@
 name: amazon_app_flutter
 description: "A new Flutter project."
 
-
-publish_to: 'none' 
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: ">=3.2.3 <4.0.0"
 
 dependencies:
   flutter:
@@ -24,49 +23,37 @@ dependencies:
   cloudinary_public: ^0.23.1
   flutter_rating_bar: ^4.0.1
   pay: ^1.1.2
-  intl: 
+  intl:
   flutter_charts: ^0.5.2
   dio: ^5.4.0
+  hooks_riverpod: ^2.4.9
+  json_annotation: ^4.8.1
+  flutter_riverpod: ^2.4.9
+  freezed_annotation: ^2.4.1
+  riverpod_annotation: ^2.3.3
+  dev: ^1.0.0
+  logger: ^2.0.2+1
+  auto_route: ^7.8.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^3.0.1
-
+  build_runner: ^2.4.8
+  riverpod_generator: ^2.3.9
+  json_serializable: ^6.7.1
+  freezed: ^2.4.6
+  auto_route_generator: ^7.3.2
 
 flutter:
-
   uses-material-design: true
 
-  
   assets:
     - assets/images/
     - assets/applepay.json
     - assets/gpay.json
 
-  
-  
-
-  
-  
-
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+scripts:
+  derry.yaml
   #
-  
-  
